--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^6.5.1",
+    "@react-navigation/native": "^6.1.1",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-lightweight-responsive": "^0.0.6"
+    "react-native-lightweight-responsive": "^0.0.6",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-tab-view": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
